# robotica

./: .gitignore  CMakeLists.txt  README.md
arduino/IOController/: IOController.ino
flightcontroller/: CMakeLists.txt  serial_proxy.py
flightcontroller/include/: arduino.hpp  drone.hpp  drone.hpp.orig  fc_config.hpp  fc_constants.hpp  flight_controller.hpp  i2c.hpp  imu.hpp
flightcontroller/src/: CMakeLists.txt  arduino.cpp  drone.cpp  drone.cpp.orig  flightController  flight_controller.cpp  i2c.cpp  imu.cpp  testprogram.cpp
include/: fc_constants.hpp  flight_controller.hpp
src/: drone.cpp  flight_controller.cpp  testgerard.txt
src/drone/: CMakeLists.txt  package.xml
src/drone_flightcontrol/: CMakeLists.txt  package.xml
src/drone_flightcontrol/include/: drone.hpp  drone_constants.hpp  fc_config.hpp  flight_controller.hpp  flightcontroller.hpp  i2c.hpp  imu.hpp  navigation.hpp  pid_controller.hpp
src/drone_flightcontrol/src/: Makefile  drone.cpp  flight_controller.cpp  flight_controller_node.cpp  flightcontroller.cpp  i2c.cpp  imu.cpp  pid_controller.cpp  test.cpp  testprogram.cpp
src/drone_flightcontrol/test/: flight_controller_test.cpp
src/drone_msgs/: CMakeLists.txt  package.xml
src/drone_msgs/msg/: ThrustSettings.msg
